msistio-istio-manifests/msistio-b-VirtualService-5050v1v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b-service-vs
  namespace: msistio
spec:
  hosts:
    - b-service
  http:
    - route:
        - destination:
            host: b-service
            subset: v1
          weight: 50
        - destination:
            host: b-service
            subset: v2
          weight: 50
