msistio-istio-manifests/msistio-b-VirtualService-fault-inject-delay-100v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b-service-vs
  namespace: msistio
spec:
  hosts:
    - b-service
  http:
    - fault:
        delay:
          fixedDelay: 3s
          percent: 100
      route:
        - destination:
            host: b-service
            subset: v3
          weight: 100
