msistio-istio-manifests/msistio-destination-b-svc-multi.yaml
##b-service多版本 规则配置
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: b-service
  namespace: msistio
spec:
  host: b-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
