msistio-istio-manifests/deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-request
  namespace: msistio
spec:
  action: DENY
  # This matches everything.
  rules:
    - {}
